--- a/Ui_PluginBuilder.ui
+++ b/Ui_PluginBuilder.ui
@@ -63,7 +63,7 @@
     </widget>
    </item>
    <item row="0" column="3">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit_class_name"/>
    </item>
    <item row="1" column="2">
     <widget class="QLabel" name="label_2">
@@ -76,7 +76,7 @@
     </widget>
    </item>
    <item row="1" column="3">
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="lineEdit_title">
      <property name="minimumSize">
       <size>
        <width>250</width>
@@ -96,7 +96,7 @@
     </widget>
    </item>
    <item row="2" column="3">
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="lineEdit_description">
      <property name="minimumSize">
       <size>
        <width>250</width>
@@ -116,7 +116,7 @@
     </widget>
    </item>
    <item row="3" column="3">
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="lineEdit_version_no">
      <property name="maximumSize">
       <size>
        <width>60</width>
@@ -139,7 +139,7 @@
     </widget>
    </item>
    <item row="4" column="3">
-    <widget class="QLineEdit" name="lineEdit_5">
+    <widget class="QLineEdit" name="lineEdit_min_version_no">
      <property name="maximumSize">
       <size>
        <width>60</width>
@@ -162,7 +162,7 @@
     </widget>
    </item>
    <item row="5" column="3">
-    <widget class="QLineEdit" name="lineEdit_6">
+    <widget class="QLineEdit" name="lineEdit_menu_text">
      <property name="minimumSize">
       <size>
        <width>250</width>
@@ -182,7 +182,7 @@
     </widget>
    </item>
    <item row="6" column="3">
-    <widget class="QLineEdit" name="lineEdit_7">
+    <widget class="QLineEdit" name="lineEdit_company_name">
      <property name="minimumSize">
       <size>
        <width>250</width>
@@ -202,7 +202,7 @@
     </widget>
    </item>
    <item row="7" column="3">
-    <widget class="QLineEdit" name="lineEdit_8">
+    <widget class="QLineEdit" name="lineEdit_email_address">
      <property name="minimumSize">
       <size>
        <width>200</width>
