--- a/templateclass/TemplateClassDialog.tmpl
+++ b/templateclass/TemplateClassDialog.tmpl
@@ -1,13 +1,12 @@
 """
 /***************************************************************************
-PluginBuilder
-
-Creates a QGIS plugin template for use as a starting point in plugin 
-development.
+${TemplateClass}Dialog
+A QGIS plugin
+$TemplateDescription
                              -------------------
-        begin                : 2011-01-20 
-        copyright            : (C) 2011 by GeoApt LLC
-        email                : gsherman@geoapt.com 
+begin                : 2011-01-20 
+copyright            : (C) 2011 by $TemplateAuthor
+email                : $TemplateEmail 
  ***************************************************************************/
 
 /***************************************************************************
@@ -18,19 +17,15 @@ development.
  *   (at your option) any later version.                                   *
  *                                                                         *
  ***************************************************************************/
- This script initializes the plugin, making it known to QGIS.
 """
-def name(): 
-  return "Create a QGIS  plugin template" 
-def description():
-  return "Creates a QGIS plugin template for use as a starting point"
-def version(): 
-  return "Version 0.1" 
-def qgisMinimumVersion():
-  return "1.0"
-def classFactory(iface): 
-  # load PluginBuilder class from file PluginBuilder
-  from PluginBuilder import PluginBuilder 
-  return PluginBuilder(iface)
 
+from PyQt4 import QtCore, QtGui 
+from ui_${templateclass} import Ui_${TemplateClass}
+# create the dialog for zoom to point
+class ${TemplateClass}Dialog(QtGui.QDialog):
+  def __init__(self): 
+    QtGui.QDialog.__init__(self) 
+    # Set up the user interface from Designer. 
+    self.ui = Ui_${TemplateClass}()
+    self.ui.setupUi(self) 
 
