--- a/templateclass/__init__.tmpl
+++ b/templateclass/__init__.tmpl
@@ -1,13 +1,12 @@
 """
 /***************************************************************************
-PluginBuilder
-
-Creates a QGIS plugin template for use as a starting point in plugin 
-development.
+$TemplateClass
+A QGIS plugin
+$TemplateDescription
                              -------------------
-        begin                : 2011-01-20 
-        copyright            : (C) 2011 by GeoApt LLC
-        email                : gsherman@geoapt.com 
+begin                : 2011-01-20 
+copyright            : (C) 2011 by $TemplateAuthor
+email                : $TemplateEmail 
  ***************************************************************************/
 
 /***************************************************************************
@@ -21,16 +20,16 @@ development.
  This script initializes the plugin, making it known to QGIS.
 """
 def name(): 
-  return "Create a QGIS  plugin template" 
+  return "$TemplateTitle" 
 def description():
-  return "Creates a QGIS plugin template for use as a starting point"
+  return "$TemplateDescription"
 def version(): 
-  return "Version 0.1" 
+  return "Version $TemplateVersion" 
 def qgisMinimumVersion():
-  return "1.0"
+  return "$TemplateQgisVersion"
 def classFactory(iface): 
-  # load PluginBuilder class from file PluginBuilder
-  from PluginBuilder import PluginBuilder 
-  return PluginBuilder(iface)
+  # load $TemplateClass class from file $TemplateClass
+  from $templateclass import $TemplateClass 
+  return $TemplateClass(iface)
 
 
