--- a/Ui_Results.ui
+++ b/Ui_Results.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>dlgResults</class>
+ <class>Ui_Results</class>
  <widget class="QDialog" name="dlgResults">
   <property name="geometry">
    <rect>
