Add reference to the pyqgis developer cookbook

--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -3,10 +3,10 @@
 <h3>Plugin Builder Results</h3>
 <div id='help' style='font-size:.8em;'>
 Your plugin $TemplateClass was creating in:<br>
-$PluginDir
+${PluginDir}</b>
 <p>
 Your QGIS plugin directory is located at:<br>
-$UserPluginDir
+<b>${UserPluginDir}</b>
 <p>
 <b>What's Next</b>
 <ol>
@@ -14,11 +14,12 @@ $UserPluginDir
    <li>Compile the ui file using puic4
    <li>Compile the resources file using pyrcc4
    <li>Test the plugin by enabling it in the QGIS plugin manager
-   <li>Customize it by editing the implementation file ${templateclass}.py
-   <li>Create your own custom icon, replacing default icon.png
-   <li>Modify your user interface by opening ${templateclass}.ui in Qt Designer (don't forget to compile it with pyuic4 after changing it)
-   <li>You can use the Makefile to compile your Ui and resource files when you make changes. This requires GNU make (gmake) 
+   <li>Customize it by editing the implementation file <b>${templateclass}.py</b>
+   <li>Create your own custom icon, replacing default <b>icon.png</b>
+   <li>Modify your user interface by opening <b>${templateclass}.ui</b> in Qt Designer (don't forget to compile it with pyuic4 after changing it)
+   <li>You can use the <b>Makefile</b> to compile your Ui and resource files when you make changes. This requires GNU make (gmake) 
 </ul>
+For more information, see the PyQGIS Developer Cookbook at <a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
 </div>
 </body>
 </html>
