Added geoapt attribution to the results

--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -21,5 +21,6 @@ Your QGIS plugin directory is located at:<br>
 </ul>
 For more information, see the PyQGIS Developer Cookbook at <a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
 </div>
+<img src="http://geoapt.com/geoapt_logo.png" width='50' alt='GeoApt LLC' title='GeoApt LLC'>
 </body>
 </html>
