--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -1,12 +1,12 @@
 <html>
 <body>
 <h3>Plugin Builder Results</h3>
-<div id='help' style='font-size:.8em;'>
-Your plugin $TemplateClass was creating in:<br>
-${PluginDir}</b>
+<div id='help' style='font-size:.9em;'>
+Your plugin <b>${TemplateClass}</b> was creating in:<br>
+&nbsp;&nbsp;<b>${PluginDir}</b>
 <p>
 Your QGIS plugin directory is located at:<br>
-<b>${UserPluginDir}</b>
+&nbsp;&nbsp;<b>${UserPluginDir}</b>
 <p>
 <b>What's Next</b>
 <ol>
@@ -15,12 +15,14 @@ Your QGIS plugin directory is located at:<br>
    <li>Compile the resources file using pyrcc4
    <li>Test the plugin by enabling it in the QGIS plugin manager
    <li>Customize it by editing the implementation file <b>${templateclass}.py</b>
-   <li>Create your own custom icon, replacing default <b>icon.png</b>
+   <li>Create your own custom icon, replacing the default <b>icon.png</b>
    <li>Modify your user interface by opening <b>${templateclass}.ui</b> in Qt Designer (don't forget to compile it with pyuic4 after changing it)
    <li>You can use the <b>Makefile</b> to compile your Ui and resource files when you make changes. This requires GNU make (gmake) 
 </ul>
-For more information, see the PyQGIS Developer Cookbook at <a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
+For more information, see the PyQGIS Developer Cookbook at:
+<a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
 </div>
-<img src="http://geoapt.com/geoapt_logo.png" width='50' alt='GeoApt LLC' title='GeoApt LLC'>
+<img src="http://geoapt.com/geoapt_logo.png" width='80' alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
+&copy;GeoApt LLC
 </body>
 </html>
