Tweak background color of the results window

--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body style='background-color:##D7ECF8;'>
 <h3>Plugin Builder Results</h3>
 <div id='help' style='font-size:.9em;'>
 Your plugin <b>${TemplateClass}</b> was creating in:<br>
