--- a/Ui_Results.ui
+++ b/Ui_Results.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>744</width>
-    <height>571</height>
+    <width>751</width>
+    <height>576</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,11 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QWebView" name="webView">
+     <property name="styleSheet">
+      <string notr="true">QWebView{
+background-color: rgb(206, 250, 255)
+}</string>
+     </property>
      <property name="url">
       <url>
        <string>about:blank</string>
