--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -22,7 +22,7 @@ Your QGIS plugin directory is located at:<br>
 For more information, see the PyQGIS Developer Cookbook at:
 <a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
 </div>
-<img src="http://geoapt.com/geoapt_logo.png" width='80' alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
+<img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
 &copy;GeoApt LLC
 </body>
 </html>
