Added icon for the plugin and icon method to __init__.py

--- a/templateclass/__init__.tmpl
+++ b/templateclass/__init__.tmpl
@@ -25,6 +25,8 @@ def description():
   return "$TemplateDescription"
 def version(): 
   return "Version $TemplateVersion" 
+def icon():
+  return "icon.png"
 def qgisMinimumVersion():
   return "$TemplateQgisVersion"
 def classFactory(iface): 
