--- a/Ui_Results.ui
+++ b/Ui_Results.ui
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>dlgResults</class>
- <widget class="QDialog" name="dlgResults">
+ <class>Results</class>
+ <widget class="QDialog" name="Results">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>474</width>
-    <height>406</height>
+    <width>751</width>
+    <height>576</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Results</string>
+   <string>Plugin Builder Results</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QWebView" name="webView">
+     <property name="styleSheet">
+      <string notr="true">QWebView{
+
+}</string>
+     </property>
      <property name="url">
       <url>
        <string>about:blank</string>
@@ -47,7 +52,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>dlgResults</receiver>
+   <receiver>Results</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -63,7 +68,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>dlgResults</receiver>
+   <receiver>Results</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
