Code cleanup. Dates now generated in templates

--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -1,12 +1,12 @@
 """
 /***************************************************************************
-$TemplateClass
-A QGIS plugin
-$TemplateDescription
-                             -------------------
-begin                : 2011-01-20
-copyright            : (C) 2011 by $TemplateAuthor
-email                : $TemplateEmail
+ $TemplateClass
+                                 A QGIS plugin
+ $TemplateDescription
+                              -------------------
+        begin                : $TemplateBuildDate
+        copyright            : (C) $TemplateYear by $TemplateAuthor
+        email                : $TemplateEmail
  ***************************************************************************/
 
 /***************************************************************************
