--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -1,4 +1,24 @@
+#/***************************************************************************
+# $TemplateClass
+# 
+# $TemplateDescription
+#                             -------------------
+#        begin                : $TemplateBuildDate
+#        copyright            : (C) $TemplateYear by $TemplateAuthor
+#        email                : $TemplateEmail
+# ***************************************************************************/
+# 
+#/***************************************************************************
+# *                                                                         *
+# *   This program is free software; you can redistribute it and/or modify  *
+# *   it under the terms of the GNU General Public License as published by  *
+# *   the Free Software Foundation; either version 2 of the License, or     *
+# *   (at your option) any later version.                                   *
+# *                                                                         *
+# ***************************************************************************/
+
 # Makefile for a PyQGIS plugin 
+
 UI_FILES = ui_${templateclass}.py
 
 RESOURCE_FILES = resources.py
