--- a/templateclass/TemplateClassDialog.tmpl
+++ b/templateclass/TemplateClassDialog.tmpl
@@ -1,12 +1,12 @@
 """
 /***************************************************************************
-${TemplateClass}Dialog
-A QGIS plugin
-$TemplateDescription
+ ${TemplateClass}Dialog
+                                 A QGIS plugin
+ $TemplateDescription
                              -------------------
-begin                : 2011-01-20
-copyright            : (C) 2011 by $TemplateAuthor
-email                : $TemplateEmail
+        begin                : $TemplateBuildDate
+        copyright            : (C) $TemplateYear by $TemplateAuthor
+        email                : $TemplateEmail
  ***************************************************************************/
 
 /***************************************************************************
