Fix typo and some layout issues in the results template

--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -2,7 +2,7 @@
 <body style='background-color:##D7ECF8;'>
 <h3>Plugin Builder Results</h3>
 <div id='help' style='font-size:.9em;'>
-Your plugin <b>${TemplateClass}</b> was creating in:<br>
+Your plugin <b>${TemplateClass}</b> was created in:<br>
 &nbsp;&nbsp;<b>${PluginDir}</b>
 <p>
 Your QGIS plugin directory is located at:<br>
@@ -10,7 +10,7 @@ Your QGIS plugin directory is located at:<br>
 <p>
 <b>What's Next</b>
 <ol>
-    <li>Unzip the plugin into your QGIS plugin directory
+    <li>Copy the entire directory containing your new plugin to the QGIS plugin directory
     <li>Compile the ui file using puic4
     <li>Compile the resources file using pyrcc4
     <li>Test the plugin by enabling it in the QGIS plugin manager
@@ -19,10 +19,14 @@ Your QGIS plugin directory is located at:<br>
     <li>Modify your user interface by opening <b>${templateclass}.ui</b> in Qt Designer (don't forget to compile it with pyuic4 after changing it)
     <li>You can use the <b>Makefile</b> to compile your Ui and resource files when you make changes. This requires GNU make (gmake)
 </ul>
+</div>
+<div style='font-size:.9em;'>
+<p>
 For more information, see the PyQGIS Developer Cookbook at:
 <a href="http://www.qgis.org/pyqgis-cookbook/index.html">http://www.qgis.org/pyqgis-cookbook/index.html</a>.
+</p>
 </div>
 <img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;GeoApt LLC
+&copy;2011 GeoApt LLC
 </body>
 </html>
