Add version to title bar of main dialog

--- a/ui_pluginbuilder.ui
+++ b/ui_pluginbuilder.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QGIS Plugin Builder</string>
+   <string>QGIS Plugin Builder 1.8</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" rowspan="9">
