Compile qrc into python with filename_rc.py template to be consistent with qt designer

--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -34,7 +34,7 @@ default: compile
 compile: $$(UI_FILES) $$(RESOURCE_FILES)
 
 %.py : %.qrc
-	pyrcc4 -o $$@  $$<
+	pyrcc4 -o $$*_rc.py  $$<
 
 %.py : %.ui
 	pyuic4 -o $$@ $$<
