change deployed resource name to have the _rc extension

--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -27,7 +27,7 @@ EXTRAS = icon.png
 
 UI_FILES = ui_${templateclass}.py
 
-RESOURCE_FILES = resources.py
+RESOURCE_FILES = resources_rc.py
 
 default: compile
 
