--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -18,14 +18,14 @@
 # ***************************************************************************/
 
 # CONFIGURATION
-PLUGIN_UPLOAD = $(CURDIR)/plugin_upload.py
+PLUGIN_UPLOAD = $$(CURDIR)/plugin_upload.py
 
 # Makefile for a PyQGIS plugin 
 
 # translation
 I18N = i18n
 SOURCES = ${templateclass}.py ui_${templateclass}.py __init__.py ${templateclass}dialog.py
-#TRANSLATIONS = $(I18N)/${templateclass}_de.ts
+#TRANSLATIONS = $$(I18N)/${templateclass}_de.ts
 TRANSLATIONS = 
 
 # global
