--- a/templateclass/help/source/conf.py.tmpl
+++ b/templateclass/help/source/conf.py.tmpl
@@ -178,8 +178,8 @@ htmlhelp_basename = 'templateclassdoc'
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', 'templateclass.tex', u'\\$\\{templateclass\\} Documentation',
-   u'\\$TemplateAuthor', 'manual'),
+  ('index', '${templateclass}.tex', u'${templateclass} Documentation',
+   u'$TemplateAuthor', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
