--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -27,6 +27,6 @@ For more information, see the PyQGIS Developer Cookbook at:
 </p>
 </div>
 <img src="http://geoapt.com/geoapt_logo_p.png" alt='GeoApt LLC' title='GeoApt LLC' align='absmiddle'>
-&copy;2011 GeoApt LLC
+&copy;2012 GeoApt LLC - geoapt.com
 </body>
 </html>
